# Simple-File-Hasher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: hash_file.hpp  process.hpp
src/: hash_file.cpp  main.cpp  main_multi.cpp  process.cpp
test/: CMakeLists.txt  generator.cpp  testing.sh  testing_multi.sh
